--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -38,7 +38,8 @@
 }
 
 body {
-   background-image: linear-gradient(150deg, #545A9C, black);
+    background-color: rgb(28, 28, 28);
+   /* background-image: linear-gradient(150deg, #545A9C, black); */
 }
 
 p {
