--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -117,6 +117,132 @@
                     </a>
                 </li>
 
+                <li>
+                    <a href="#" class="kaart">
+                        <img class="banner" src="/stylesheets/images/shoulder.jpeg" alt="">
+                        <div class="kaart_overlay">
+                            <div class="kaart_header">
+                                <!-- <svg class="arc">   </svg> -->
+                                <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
+                                <div class="kaart_header_tekst">
+                                    <h3><span class="naam">Bert</span></h3>
+                                    <p>Beschikbaar op: ma, di , do</p>
+                                </div>
+                            </div>
+                            <div class="skills-container">
+                                <h4>Skills</h4>
+                                <ul class="skills">
+                                    <li>Calisthenics</li>
+                                    <li>Weights</li>
+                                    <li>Yoga</li>
+                                    <li>Hardlopen</li>
+                                    <li>Calisthenics</li>
+                                
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+
+
+                <li>
+                    <a href="#" class="kaart">
+                        <img class="banner" src="/stylesheets/images/shoulder.jpeg" alt="">
+                        <div class="kaart_overlay">
+                            <div class="kaart_header">
+                                <!-- <svg class="arc">   </svg> -->
+                                <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
+
+                                <div class="kaart_header_tekst">
+                                    <h3><span class="naam">Angela</span></h3>
+                                    <p>Beschikbaar op: ma, di , do</p>
+                                </div>
+                            </div>
+
+                            <div class="skills-container">
+                                <h4>Skills</h4>
+                                <ul class="skills">
+                                    <li>Calisthenics</li>
+                                    <li>Weights</li>
+                                    <li>Yoga</li>
+                                    <li>Hardlopen</li>
+                                    <li>Calisthenics</li>
+                                    <li>Weights</li>
+                                    <li>Yoga</li>
+                                    <li>Hardlopen</li>
+                                    <li>Calisthenics</li>
+                                    <li>Weights</li>
+                                    <li>Yoga</li>
+                                    <li>Hardlopen</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="kaart">
+                        <img class="banner" src="/stylesheets/images/shoulder.jpeg" alt="">
+                        <div class="kaart_overlay">
+                            <div class="kaart_header">
+                                <!-- <svg class="arc">   </svg> -->
+                                <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
+                                <div class="kaart_header_tekst">
+                                    <h3><span class="naam">Bert</span></h3>
+                                    <p>Beschikbaar op: ma, di , do</p>
+                                </div>
+                            </div>
+                            <div class="skills-container">
+                                <h4>Skills</h4>
+                                <ul class="skills">
+                                    <li>Calisthenics</li>
+                                    <li>Weights</li>
+                                    <li>Yoga</li>
+                                    <li>Hardlopen</li>
+                                    <li>Calisthenics</li>
+                                
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+
+
+                <li>
+                    <a href="#" class="kaart">
+                        <img class="banner" src="/stylesheets/images/shoulder.jpeg" alt="">
+                        <div class="kaart_overlay">
+                            <div class="kaart_header">
+                                <!-- <svg class="arc">   </svg> -->
+                                <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
+
+                                <div class="kaart_header_tekst">
+                                    <h3><span class="naam">Angela</span></h3>
+                                    <p>Beschikbaar op: ma, di , do</p>
+                                </div>
+                            </div>
+
+                            <div class="skills-container">
+                                <h4>Skills</h4>
+                                <ul class="skills">
+                                    <li>Calisthenics</li>
+                                    <li>Weights</li>
+                                    <li>Yoga</li>
+                                    <li>Hardlopen</li>
+                                    <li>Calisthenics</li>
+                                    <li>Weights</li>
+                                    <li>Yoga</li>
+                                    <li>Hardlopen</li>
+                                    <li>Calisthenics</li>
+                                    <li>Weights</li>
+                                    <li>Yoga</li>
+                                    <li>Hardlopen</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+
 
     
             </ul>
