--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -47,11 +47,30 @@
 
 
 
+
         <!-- kaarten die opkomen -->
 
 
-        <div id="nameList">
-            <input type="search" class="search" placeholder="Filter op...">
+        <div id="mainSection">
+
+            <h2>Personal Trainers</h2>
+           
+           
+            <div class="filter">
+
+                <input type="search" class="search" placeholder="Filter op naam...">
+
+                <div class="pills">
+                    <button class="pill" type="button">24 hours</button>
+                    <button class="pill" type="button">Top Trainers</button>
+                    <button class="pill" type="button">Skills</button>
+                    <button class="pill" type="button">Beschikbaarheid</button>
+                </div>
+            </div>
+
+
+
+
 
             <ul class="kaarten list">
                 <li>
@@ -74,7 +93,7 @@
                                     <li>Yoga</li>
                                     <li>Hardlopen</li>
                                     <li>Calisthenics</li>
-                                
+
                                 </ul>
                             </div>
                         </div>
@@ -137,7 +156,70 @@
                                     <li>Yoga</li>
                                     <li>Hardlopen</li>
                                     <li>Calisthenics</li>
-                                
+
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+
+
+                <li>
+                    <a href="#" class="kaart">
+                        <img class="banner" src="/stylesheets/images/shoulder.jpeg" alt="">
+                        <div class="kaart_overlay">
+                            <div class="kaart_header">
+                                <!-- <svg class="arc">   </svg> -->
+                                <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
+
+                                <div class="kaart_header_tekst">
+                                    <h3><span class="naam">gela</span></h3>
+                                    <p>Beschikbaar op: ma, di , do</p>
+                                </div>
+                            </div>
+
+                            <div class="skills-container">
+                                <h4>Skills</h4>
+                                <ul class="skills">
+                                    <li>Calisthenics</li>
+                                    <li>Weights</li>
+                                    <li>Yoga</li>
+                                    <li>Hardlopen</li>
+                                    <li>Calisthenics</li>
+                                    <li>Weights</li>
+                                    <li>Yoga</li>
+                                    <li>Hardlopen</li>
+                                    <li>Calisthenics</li>
+                                    <li>Weights</li>
+                                    <li>Yoga</li>
+                                    <li>Hardlopen</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="kaart">
+                        <img class="banner" src="/stylesheets/images/shoulder.jpeg" alt="">
+                        <div class="kaart_overlay">
+                            <div class="kaart_header">
+                                <!-- <svg class="arc">   </svg> -->
+                                <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
+                                <div class="kaart_header_tekst">
+                                    <h3><span class="naam">Gert</span></h3>
+                                    <p>Beschikbaar op: ma, di , do</p>
+                                </div>
+                            </div>
+                            <div class="skills-container">
+                                <h4>Skills</h4>
+                                <ul class="skills">
+                                    <li>Calisthenics</li>
+                                    <li>Weights</li>
+                                    <li>Yoga</li>
+                                    <li>Hardlopen</li>
+                                    <li>Calisthenics</li>
+
                                 </ul>
                             </div>
                         </div>
@@ -200,13 +282,12 @@
                                     <li>Yoga</li>
                                     <li>Hardlopen</li>
                                     <li>Calisthenics</li>
-                                
+
                                 </ul>
                             </div>
                         </div>
                     </a>
                 </li>
-
 
                 <li>
                     <a href="#" class="kaart">
@@ -215,13 +296,11 @@
                             <div class="kaart_header">
                                 <!-- <svg class="arc">   </svg> -->
                                 <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
-
                                 <div class="kaart_header_tekst">
-                                    <h3><span class="naam">Angela</span></h3>
+                                    <h3><span class="naam">Cert</span></h3>
                                     <p>Beschikbaar op: ma, di , do</p>
                                 </div>
                             </div>
-
                             <div class="skills-container">
                                 <h4>Skills</h4>
                                 <ul class="skills">
@@ -230,25 +309,16 @@
                                     <li>Yoga</li>
                                     <li>Hardlopen</li>
                                     <li>Calisthenics</li>
-                                    <li>Weights</li>
-                                    <li>Yoga</li>
-                                    <li>Hardlopen</li>
-                                    <li>Calisthenics</li>
-                                    <li>Weights</li>
-                                    <li>Yoga</li>
-                                    <li>Hardlopen</li>
+
                                 </ul>
                             </div>
                         </div>
                     </a>
                 </li>
 
-
-    
             </ul>
+
         </div>
-
-
 
 
         <script src="/stylesheets/scripts/overzicht.js"></script>
