--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -72,6 +72,9 @@
 
 
 
+            <p class="beschikbareBuddies">8 Buddies Beschikbaar</p>
+
+
             <ul class="kaarten list">
                 <li>
                     <a href="#" class="kaart">
