extra pagina;s bijgevoegd

--- a/views/detailpagina.ejs
+++ b/views/detailpagina.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +9,69 @@
 
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/navbar.css">
+    <link rel="stylesheet" href="/stylesheets/detailpagina.css">
 </head>
+
 <body>
     <header>
+        <!--HamBurger Icon-->
+        <div class="bars" id="nav-action">
+            <span class="bar"> </span>
+        </div>
 
+        <!--Navbar Links-->
+        <nav id="nav">
+            <ul class="navlist">
+                <li class="shape-circle circle-one"><a href="#">Plan Maken</a></li>
+                <li class="shape-circle circle-two">
+                    <a href="#">Trending Workouts</a>
+                </li>
+                <li class="shape-circle circle-three"><a href="#">Over Ons</a></li>
+                <li class="shape-circle circle-five">
+                    <a href="#">Home</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main>
 
+        <section>
+            <h2>Trainer profiel</h2>
+        </section>
+
+        <section>
+            <div class="profielBox">
+                <img src="#" alt="#">
+                <h3>Angela</h3>
+            </div>
+        </section>
+
+
+        <section>
+            <article class="skillList">
+                <h3>Skills</h3>
+                <ul>
+                    <li>Calisthenics</li>
+                    <li>Weights</li>
+                    <li>Rehabilitatie</li>
+                </ul>
+            </article>
+        </section>
+
+        <section>
+            <article class="overMij">
+                <h4>Over Mij</h4>
+                <p>Hallo! Mijn naam is Angela, en ik ben een gecertificeerde personal trainer met meer dan 10 jaar
+                    ervaring in de fitnessindustrie. Mijn passie is om mensen te helpen hun gezondheids- en
+                    fitnessdoelen te bereiken door middel van op maat gemaakte trainingsprogramma's en deskundige
+                    begeleiding.</p>
+            </article>
+        </section>
     </main>
+
+    <script src="/stylesheets/scripts/overzicht.js"></script>
+    <script src="/stylesheets/scripts/index.js"></script>
 </body>
+
 </html>
