--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -53,7 +53,7 @@
 
         <div id="mainSection">
 
-            <h2>Personal Trainers</h2>
+            <h2 class="countUsers">Personal Trainers</h2>
            
            
             <div class="filter">
@@ -145,9 +145,9 @@
                         <div class="kaart_overlay">
                             <div class="kaart_header">
                                 <!-- <svg class="arc">   </svg> -->
-                                <img class="profielfoto" src="/stylesheets/images/trainer2.png" alt="">
+                                <img class="profielfoto" src="/stylesheets/images/subhaan-saleem-Jf7hr7ZQzg8-unsplash.jpg" alt="">
                                 <div class="kaart_header_tekst">
-                                    <h3><span class="naam">Bert</span></h3>
+                                    <h3><span class="naam">Subhaan</span></h3>
                                     <p>Beschikbaar op: ma, di , do</p>
                                 </div>
                             </div>
