--- a/views/detailpagina.ejs
+++ b/views/detailpagina.ejs
@@ -36,6 +36,8 @@
 
     <main>
 
+        <button class="terug"> <img src="" alt="#"> </button>
+
         <section>
             <h2>Trainer profiel</h2>
         </section>
@@ -51,7 +53,7 @@
         <section>
             <article class="skillList">
                 <h3>Skills</h3>
-                <ul>
+                <ul class="skills">
                     <li>Calisthenics</li>
                     <li>Weights</li>
                     <li>Rehabilitatie</li>
@@ -61,13 +63,21 @@
 
         <section>
             <article class="overMij">
-                <h4>Over Mij</h4>
+                <h3>Over Mij</h3>
                 <p>Hallo! Mijn naam is Angela, en ik ben een gecertificeerde personal trainer met meer dan 10 jaar
                     ervaring in de fitnessindustrie. Mijn passie is om mensen te helpen hun gezondheids- en
                     fitnessdoelen te bereiken door middel van op maat gemaakte trainingsprogramma's en deskundige
                     begeleiding.</p>
             </article>
         </section>
+
+
+        <div class="container">
+            <div class="form">
+                <div class="contact-info">ffafa</div>
+                <div class="contact-form"></div>
+            </div>
+        </div>
     </main>
 
     <script src="/stylesheets/scripts/overzicht.js"></script>
