--- a/views/overons.ejs
+++ b/views/overons.ejs
@@ -11,6 +11,34 @@
     <link rel="stylesheet" href="/stylesheets/overons.css">
 </head>
 <body>
+    <header>
+             <!--HamBurger Icon-->
+             <div class="bars" id="nav-action">
+                <span class="bar"> </span>
+            </div>
     
+            <!--Navbar Links-->
+            <nav id="nav">
+                <ul class="navlist">
+                    <li class="shape-circle circle-one"><a href="#">Plan Maken</a></li>
+                    <li class="shape-circle circle-two">
+                        <a href="#">Trending Workouts</a>
+                    </li>
+                    <li class="shape-circle circle-three"><a href="#">Over Ons</a></li>
+                    <li class="shape-circle circle-five">
+                        <a href="#">Home</a>
+                    </li>
+                </ul>
+    </header>
+
+    <main>
+
+        <h2>Over ons</h2>
+        <p>kjnlnjnljnlanfnsdkflnsdkfjnaslkfjnaskjf</p>
+    </main>
+
+
+    <script src="/stylesheets/scripts/overzicht.js"></script>
+    <script src="/stylesheets/scripts/index.js"></script>
 </body>
 </html>
