--- a/public/stylesheets/detailpagina.css
+++ b/public/stylesheets/detailpagina.css
@@ -9,21 +9,66 @@ main{
 
 h2 {
     text-transform: uppercase;
+   color:  var(--main-tekst);
+}
+
+h3{
+    margin-bottom: 0.3em;
+    font-size: 1.3em;
 }
 
 .profielBox {
-    margin-top: 2em;
+    margin-top: 1em;
     background: gray;
     padding: 12em 0 12em 0;
     border-radius: 0.2em;
     width: 100%;
+    height: auto;
+    max-width: 600px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
 }
 
 
-.skillList{
-    margin-top: 3em;
+.skillList {
+    margin-top: 2em;
+}
+
+.skills {
+    display: flex;
+}
+
+
+.skills li{
+ margin-right: 0.8em;
+ background-color: rgb(69, 69, 69);
+ padding: 0.5em;
+ border-radius: 2em;
+ 
 }
 
 .overMij{
     margin-top: 3em;
+}
+
+.container {
+    position: relative;
+    width: 100%;
+    background-color: #fff;
+    min-height: 100vh;
+    padding: 2rem;
+    margin-top: 2em;
+    overflow: hidden;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form {
+    width: 100%;
+    max-width: 820px;
+    height: 500px;
+    background-color: #fafafa;
+    border-radius: 10px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
 }
