--- a/views/detailpagina.ejs
+++ b/views/detailpagina.ejs
@@ -74,10 +74,51 @@
 
         <div class="container">
             <div class="form">
-                <div class="contact-info">ffafa</div>
-                <div class="contact-form"></div>
+                <div class="contact-info"></div>
+
+                <div class="contact-form">
+                    <span class="circle one"></span>
+                    <span class="circle two"></span>
+                </div>
+
+                <form action="#" method="post">
+                    <h3 class="title">Contact mij</h3>
+
+                    <div class="input-container">
+                        <input type="text" name="name" class="input">
+                        <label for="">Username</label>
+
+                    </div>
+
+                        <div class="input-container">
+                            <input type="email" name="email" class="input">
+                            <label for="">Email</label>
+
+
+
+                        </div>
+
+                        <div class="input-container">
+                            <input type="tel" name="telefoonnummer" class="input">
+                            <label for="">telefoonnummer</label>
+
+
+                        </div>
+
+
+                        <div class="input-container bericht">
+                           <textarea name="bericht" class="input"></textarea>
+                            <label for="">Stuur een bericht</label>
+                    </div>
+
+                    <input type="submit" value="Send" class="button">
+
+
+                </form>
             </div>
         </div>
+
+
     </main>
 
     <script src="/stylesheets/scripts/overzicht.js"></script>
