--- a/public/stylesheets/detailpagina.css
+++ b/public/stylesheets/detailpagina.css
@@ -1,10 +1,19 @@
 *{
-    color: white;
+    box-sizing: border-box;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 95vw;
 }
 
 main{
-    margin-top: 3em;
     padding: 2em;
+    background-color: rgb(34, 33, 33);
+    margin: 4em 1em 2em 2em;
+    border-radius: 0.2em;
 }
 
 h2 {
@@ -50,84 +59,178 @@ h3{
     margin-top: 3em;
 }
 
-.container {
+
+
+
+
+/* Styling form */
+.containerForm {
     position: relative;
     width: 100%;
-    min-height: 100vh;
-    padding: 2rem;
-    margin-top: 2em;
-    overflow: hidden;
+    max-width: 900px;
+    padding: 40px;
+    display: flex;
+    gap: 80px;
+    border-radius: 6px;
+    background-color: gray;
+    margin-top: 3em;
+    box-shadow: 0 0 10px  rgba(0, 0, 0, 0.1);
+}
 
+.left{
+    width: 55%;
+}
+
+.heading {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1;
+    color: rgb(230, 244, 39);
+}
+
+.text {
+    font-size: 14px;
+    margin-top: 0.5em;
+}
+
+form{
+    color: black;
+    margin-top: 20px;
+}
+
+.inputBox {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.inputBox input,
+.inputBox textarea {
+   width: 100%;
+   padding: 10px;
+   font-size: 16px;
+   border-radius: 5px;
+   color: gray;
+   border: none;
+   outline: none;
+   background-color: darkgray;
+}
+.inputBox input::placeholder,
+.inputBox textarea::placeholder {
+    opacity: 0.5;
+    font-size: 12px;
+}
+
+.inputBox.error input,
+.inputBox.error textarea {
+    border-bottom: 1px solid red;
+}
+
+
+.inputBox textarea {
+ resize: none; /* Zorgt ervoor dat mensen de tekst box niet kunnen resizen*/
+
+    height: 150px;
+}
+
+.btn{
+    width: 100%;
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+.btn:hover {
+    background-color: darkgray;
+}
+
+
+/* Styling rechterkant van de form */
+
+.right {
+    width: 45%;
+}
+
+.illustration {
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.illustration img {
+   width: 70%;
+   margin: auto;
+   margin-top: 30px;
+}
+
+.contact-info {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 10px;
+}
+
+.infoBox{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.info-box .icon {
+    width: 20px;
+    height: 20px;
+    font-size: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-
-/* styling form */
-
-.form {
-    width: 100%;
-    max-width: 820px;
-    height: 500px;
-    background-color: #fafafa;
-    border-radius: 10px;
-    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.contact-info{
-    background-color: rgb(255, 255, 255);
-}
-
-
-.contact-form{
-    background-color: rgb(78, 78, 78);
-    position: relative;
-}
-
-.contact-form::before{
-    content: "";
-    position: absolute;
-    width: 26px;
-    height: 26px;
-    background-color:  rgb(78, 78, 78);
-    transform: rotate(45deg);
-    top: 50px;
-    left: -13px;
-}
-
-
-
-/* styling circletjes */
-.circle {
     border-radius: 50%;
-    background: linear-gradient(135deg, transparent 20%,rgb(78, 78, 78));
+    border: 1px solid black;
+}
+
+.info-box .text {
+ margin: 0;
+}
+
+.info-box .text a {
+    color: rgb(0, 0, 0);
+}
+
+
+
+/* Social icons */
+
+/* .social-icons {
     position: absolute;
-}
+    background-color: red;
+    color: red;
+    right: -10px;
+    bottom: 50px;
+    border: 10px solid red;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    font-size: 25px;
+    align-items: center;
+} */
 
-.circle.one{
-    width: 130px;
-    height: 130px;
-    top: 130px;
-    right: -40px;
-    background-color: rgb(167, 127, 127);
-}
 
-.circle.two{
-    width: 80px;
-    height: 80px;
-    top: 10px;
-    right: 30px;
-    background-color: rgb(167, 127, 127);
-}
+/* Scherm op mobile */
+@media (max-width: 768px) {
+    .containerForm{
+        flex-direction: column;
+        gap: 40px;
+        padding: 20px;
+    }
 
-form {
-    padding: 2.3rem 2.2rem;
-    z-index: 10;
-    overflow: hidden;
-    position: relative;
+    .left, .right{
+        width: 100%;
+    }
+
+    .contact-info {
+        margin-top: 40px;
+    }
+    
 }
