--- a/public/stylesheets/overons.css
+++ b/public/stylesheets/overons.css
@@ -1,4 +1,34 @@
+
+
+main {
+    margin-top: 8em;
+    padding: 2em;
+    animation: fade-inout 4s;
+}
+
 h2 {
     text-transform: uppercase;
-   color:  var(--main-tekst);
+    color:  var(--tekst);
+    font-size: 5em;
 }
+
+main p {
+    margin-top: 0.2em;
+    color:  var(--tekst);
+    font-size: 1.8em;
+    padding: 0.2em;
+}
+
+
+footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+@keyframes fade-inout {
+    0%{opacity: 0;}
+    100%{opacity: 1;}
+}
+
