--- a/views/trendingworkouts.ejs
+++ b/views/trendingworkouts.ejs
@@ -10,26 +10,9 @@
   </head>
 
   <body>
-    <header>
-      <!--HamBurger Icon-->
-      <div class="bars" id="nav-action">
-        <span class="bar"> </span>
-      </div>
 
-      <!--Navbar Links-->
-      <nav id="nav">
-        <ul class="navlist">
-          <li class="shape-circle circle-one"><a href="#">Plan Maken</a></li>
-          <li class="shape-circle circle-two">
-            <a href="#">Trending Workouts</a>
-          </li>
-          <li class="shape-circle circle-three"><a href="#">Over Ons</a></li>
-          <li class="shape-circle circle-five">
-            <a href="#">Home</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+   <!-- include maakt het overzichtelijker om alles toe te voegen, want dan kan je een section gewoon in een aparte file zetten-->
+<%-include ('nav.ejs')%> 
 
     <main>
       <!--Main Body Content-->
