--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,9 +1,32 @@
-
 <link rel="stylesheet" href="/stylesheets/footer.css">
 
 <footer>
-    <div class="footer-content">
-        <h3>FitBuddy</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum repellendus repellat voluptate quia recusandae!</p>
+    <div class="footer-info">
+        <div class="footer-about">
+            <h4>Over Ons</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates minima hic similique atque.</p>
+            <div class="social-media">
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">LinkedIn</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-link">
+            <h4>Quick Links</h4>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Over ons</a></li>
+                <li><a href="#">Trending Workouts</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="footer-contact">
+            <h4>Contact</h4>
+            <ul>
+                <li><a href="#">Home</a></li>
+            </ul>
+        </div>
     </div>
 </footer>
